--- a/bowl_pool/2017-2018/rankings.html
+++ b/bowl_pool/2017-2018/rankings.html
@@ -364,81 +364,81 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2017-12-30 22:32:57</em></div>
-<div class="line"><em>Last bowl scored:  Outback Bowl (Michigan vs. South Carolina)</em></div>
+<div class="line"><em>Last updated:  2017-12-30 22:38:03</em></div>
+<div class="line"><em>Last bowl scored:  Orange Bowl (Wisconsin vs. Miami)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. The Water and The Well 31.25</div>
-<div class="line">2. Clutch City 29.0</div>
-<div class="line">3. Cowboy 28.75</div>
-<div class="line">3. The Pick Doctor 28.75</div>
-<div class="line">5. Bobbo 28.5</div>
-<div class="line">5. UrbranLegend 28.5</div>
-<div class="line">7. Bevo's Best 28.25</div>
-<div class="line">8. cutie pie 27.75</div>
-<div class="line">8. Jake and the Neverland Pirates 27.75</div>
-<div class="line">10. Juul 27.5</div>
-<div class="line">10. Trojans 27.5</div>
-<div class="line">12. Godiva Nine! 26.25</div>
-<div class="line">12. Superman 26.25</div>
-<div class="line">14. 4 Rackets 26.0</div>
-<div class="line">14. Make Bowl Season Great Again 26.0</div>
-<div class="line">14. War Eagle 26.0</div>
-<div class="line">17. <strong>Eclipse 25.75</strong></div>
-<div class="line">17. I lost the password to my first bracket 25.75</div>
-<div class="line">19. beach lady 25.5</div>
-<div class="line">19. <strong>Bumblerooski 25.5</strong></div>
-<div class="line">21. Putin's Dog 25.0</div>
-<div class="line">21. <strong>Thunder 25.0</strong></div>
-<div class="line">21. Tucker 25.0</div>
-<div class="line">24. Santa Cruz Bill 24.5</div>
-<div class="line">25. <strong>#MamaBear 24.25</strong></div>
-<div class="line">25. Rapacke's Bracket 24.25</div>
-<div class="line">25. Texas Big Red 24.25</div>
-<div class="line">25. Victorious Secret 24.25</div>
-<div class="line">29. MidWestWheat 24.0</div>
-<div class="line">29. Pepper Bear 24.0</div>
-<div class="line">29. Sorbet 24.0</div>
-<div class="line">29. Yoda 24.0</div>
-<div class="line">33. <strong>Static 23.75</strong></div>
-<div class="line">33. Still a Beaver Believer 23.75</div>
-<div class="line">35. Katyusha 23.25</div>
-<div class="line">35. Kevin's bracket 23.25</div>
-<div class="line">35. Luck be a lady 23.25</div>
-<div class="line">35. <strong>Nerf Herder 23.25</strong></div>
-<div class="line">39. Assistant Coach Riley? 23.0</div>
-<div class="line">39. OSUX3 23.0</div>
-<div class="line">41. Winning Jeff 22.75</div>
-<div class="line">42. Bay City Rollers 22.5</div>
-<div class="line">42. Go For Broke 22.5</div>
-<div class="line">42. Josh's Bracket 22.5</div>
-<div class="line">42. Lucky in 2018 22.5</div>
-<div class="line">46. <strong>GlamKam 22.25</strong></div>
-<div class="line">47. Adrian A 22.0</div>
-<div class="line">47. Brothers before others 22.0</div>
-<div class="line">49. Coog Crew 21.75</div>
-<div class="line">49. Go For Bones 21.75</div>
-<div class="line">49. Maui Girl 21.75</div>
-<div class="line">49. Santa's Helper 21.75</div>
-<div class="line">53. Batman 21.5</div>
-<div class="line">53. Blind Dog's Bluff 21.5</div>
-<div class="line">53. Escalante 21.5</div>
+<div class="line">1. Clutch City 33.25</div>
+<div class="line">1. The Water and The Well 33.25</div>
+<div class="line">3. Cowboy 30.75</div>
+<div class="line">3. Juul 30.75</div>
+<div class="line">5. 4 Rackets 29.0</div>
+<div class="line">5. I lost the password to my first bracket 29.0</div>
+<div class="line">5. War Eagle 29.0</div>
+<div class="line">8. <strong>Bumblerooski 28.75</strong></div>
+<div class="line">9. Superman 28.25</div>
+<div class="line">10. Make Bowl Season Great Again 28.0</div>
+<div class="line">11. <strong>Eclipse 27.75</strong></div>
+<div class="line">11. Jake and the Neverland Pirates 27.75</div>
+<div class="line">13. The Pick Doctor 27.5</div>
+<div class="line">13. Trojans 27.5</div>
+<div class="line">15. Bobbo 27.25</div>
+<div class="line">15. UrbranLegend 27.25</div>
+<div class="line">17. Bevo's Best 27.0</div>
+<div class="line">17. MidWestWheat 27.0</div>
+<div class="line">19. cutie pie 26.5</div>
+<div class="line">19. Katyusha 26.5</div>
+<div class="line">19. <strong>Nerf Herder 26.5</strong></div>
+<div class="line">19. Santa Cruz Bill 26.5</div>
+<div class="line">23. <strong>#MamaBear 26.25</strong></div>
+<div class="line">23. Adrian A 26.25</div>
+<div class="line">23. Godiva Nine! 26.25</div>
+<div class="line">23. OSUX3 26.25</div>
+<div class="line">27. Coog Crew 26.0</div>
+<div class="line">28. beach lady 25.5</div>
+<div class="line">28. <strong>GlamKam 25.5</strong></div>
+<div class="line">30. Assistant Coach Riley? 25.0</div>
+<div class="line">30. Maui Girl 25.0</div>
+<div class="line">30. Putin's Dog 25.0</div>
+<div class="line">30. <strong>Thunder 25.0</strong></div>
+<div class="line">30. Tucker 25.0</div>
+<div class="line">35. Batman 24.75</div>
+<div class="line">35. Escalante 24.75</div>
+<div class="line">35. Still a Beaver Believer 24.75</div>
+<div class="line">38. Josh's Bracket 24.5</div>
+<div class="line">39. Rapacke's Bracket 24.25</div>
+<div class="line">39. Victorious Secret 24.25</div>
+<div class="line">41. Pepper Bear 24.0</div>
+<div class="line">41. Sorbet 24.0</div>
+<div class="line">41. Yoda 24.0</div>
+<div class="line">44. Luck be a lady 23.25</div>
+<div class="line">45. Texas Big Red 23.0</div>
+<div class="line">46. War Beaver 22.75</div>
+<div class="line">46. Winning Jeff 22.75</div>
+<div class="line">48. Bay City Rollers 22.5</div>
+<div class="line">48. Blind Dog's Bluff 22.5</div>
+<div class="line">48. Go For Broke 22.5</div>
+<div class="line">48. <strong>Static 22.5</strong></div>
+<div class="line">52. Lucky in 2018 22.25</div>
+<div class="line">53. Kevin's bracket 22.0</div>
+<div class="line">54. Go For Bones 21.75</div>
+<div class="line">55. <strong>D-Bo 21.5</strong></div>
 <div class="line">56. The Striker 21.25</div>
+<div class="line">57. Nurse Ratched 21.0</div>
 <div class="line">57. Pooh Bear 21.0</div>
-<div class="line">58. Blindhog2017 20.75</div>
-<div class="line">58. War Beaver 20.75</div>
-<div class="line">60. Swampdonkey 20.25</div>
-<div class="line">61. YOLO Pups 20.0</div>
-<div class="line">62. Sgt. Pepper 19.75</div>
-<div class="line">63. <strong>Lightning 19.5</strong></div>
-<div class="line">64. Duke Rules 19.0</div>
-<div class="line">64. Nurse Ratched 19.0</div>
-<div class="line">66. Julez 18.75</div>
-<div class="line">67. <strong>D-Bo 18.25</strong></div>
-<div class="line">68. hapagirl 18.0</div>
-<div class="line">69. <strong>Em214 17.5</strong></div>
-<div class="line">70. Warren Mooned Me 16.75</div>
-<div class="line">71. West Coast Bias 15.25</div>
+<div class="line">59. Brothers before others 20.75</div>
+<div class="line">59. <strong>Em214 20.75</strong></div>
+<div class="line">59. Sgt. Pepper 20.75</div>
+<div class="line">62. <strong>Lightning 20.5</strong></div>
+<div class="line">62. Santa's Helper 20.5</div>
+<div class="line">64. Swampdonkey 20.25</div>
+<div class="line">65. hapagirl 20.0</div>
+<div class="line">66. Blindhog2017 19.5</div>
+<div class="line">67. Julez 18.75</div>
+<div class="line">68. West Coast Bias 18.25</div>
+<div class="line">69. YOLO Pups 18.0</div>
+<div class="line">70. Duke Rules 17.75</div>
+<div class="line">71. Warren Mooned Me 16.75</div>
 </div>
 </div>
 </body>
