--- a/bowl_pool/2017-2018/rankings.html
+++ b/bowl_pool/2017-2018/rankings.html
@@ -364,81 +364,81 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2017-12-30 23:00:19</em></div>
-<div class="line"><em>Last bowl scored:  Outback Bowl (Michigan vs. South Carolina)</em></div>
+<div class="line"><em>Last updated:  2018-01-01 18:08:45</em></div>
+<div class="line"><em>Last bowl scored:  Citrus Bowl (Lousiana State (LSU) vs. Notre Dame)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. The Water and The Well 31.25</div>
-<div class="line">2. Clutch City 29.0</div>
-<div class="line">3. Cowboy 28.75</div>
-<div class="line">3. The Pick Doctor 28.75</div>
-<div class="line">5. Bobbo 28.5</div>
-<div class="line">5. UrbranLegend 28.5</div>
-<div class="line">7. Bevo's Best 28.25</div>
-<div class="line">8. cutie pie 27.75</div>
-<div class="line">8. Jake and the Neverland Pirates 27.75</div>
-<div class="line">10. Juul 27.5</div>
-<div class="line">10. Trojans 27.5</div>
-<div class="line">12. Godiva Nine! 26.25</div>
-<div class="line">12. Superman 26.25</div>
-<div class="line">14. 4 Rackets 26.0</div>
-<div class="line">14. Make Bowl Season Great Again 26.0</div>
-<div class="line">14. War Eagle 26.0</div>
-<div class="line">17. <strong>Eclipse 25.75</strong></div>
-<div class="line">17. I lost the password to my first bracket 25.75</div>
-<div class="line">19. beach lady 25.5</div>
-<div class="line">19. <strong>Bumblerooski 25.5</strong></div>
-<div class="line">21. Putin's Dog 25.0</div>
-<div class="line">21. <strong>Thunder 25.0</strong></div>
-<div class="line">21. Tucker 25.0</div>
-<div class="line">24. Santa Cruz Bill 24.5</div>
-<div class="line">25. <strong>#MamaBear 24.25</strong></div>
-<div class="line">25. Rapacke's Bracket 24.25</div>
-<div class="line">25. Texas Big Red 24.25</div>
-<div class="line">25. Victorious Secret 24.25</div>
-<div class="line">29. MidWestWheat 24.0</div>
-<div class="line">29. Pepper Bear 24.0</div>
-<div class="line">29. Sorbet 24.0</div>
-<div class="line">29. Yoda 24.0</div>
-<div class="line">33. <strong>Static 23.75</strong></div>
-<div class="line">33. Still a Beaver Believer 23.75</div>
-<div class="line">35. Katyusha 23.25</div>
-<div class="line">35. Kevin's bracket 23.25</div>
-<div class="line">35. Luck be a lady 23.25</div>
-<div class="line">35. <strong>Nerf Herder 23.25</strong></div>
-<div class="line">39. Assistant Coach Riley? 23.0</div>
-<div class="line">39. OSUX3 23.0</div>
-<div class="line">41. Winning Jeff 22.75</div>
-<div class="line">42. Bay City Rollers 22.5</div>
-<div class="line">42. Go For Broke 22.5</div>
-<div class="line">42. Josh's Bracket 22.5</div>
-<div class="line">42. Lucky in 2018 22.5</div>
-<div class="line">46. <strong>GlamKam 22.25</strong></div>
-<div class="line">47. Adrian A 22.0</div>
-<div class="line">47. Brothers before others 22.0</div>
-<div class="line">49. Coog Crew 21.75</div>
-<div class="line">49. Go For Bones 21.75</div>
-<div class="line">49. Maui Girl 21.75</div>
-<div class="line">49. Santa's Helper 21.75</div>
-<div class="line">53. Batman 21.5</div>
-<div class="line">53. Blind Dog's Bluff 21.5</div>
-<div class="line">53. Escalante 21.5</div>
-<div class="line">56. The Striker 21.25</div>
-<div class="line">57. Pooh Bear 21.0</div>
-<div class="line">58. Blindhog2017 20.75</div>
-<div class="line">58. War Beaver 20.75</div>
-<div class="line">60. Swampdonkey 20.25</div>
-<div class="line">61. YOLO Pups 20.0</div>
-<div class="line">62. Sgt. Pepper 19.75</div>
-<div class="line">63. <strong>Lightning 19.5</strong></div>
-<div class="line">64. Duke Rules 19.0</div>
-<div class="line">64. Nurse Ratched 19.0</div>
-<div class="line">66. Julez 18.75</div>
-<div class="line">67. <strong>D-Bo 18.25</strong></div>
-<div class="line">68. hapagirl 18.0</div>
-<div class="line">69. <strong>Em214 17.5</strong></div>
-<div class="line">70. Warren Mooned Me 16.75</div>
-<div class="line">71. West Coast Bias 15.25</div>
+<div class="line">1. Winning Jeff 34.0</div>
+<div class="line">2. Trojans 33.75</div>
+<div class="line">3. Tucker 33.25</div>
+<div class="line">4. UrbranLegend 32.75</div>
+<div class="line">5. The Water and The Well 32.25</div>
+<div class="line">6. Clutch City 32.0</div>
+<div class="line">6. The Pick Doctor 32.0</div>
+<div class="line">8. Bevo's Best 31.25</div>
+<div class="line">9. Cowboy 31.0</div>
+<div class="line">10. beach lady 30.75</div>
+<div class="line">11. Bobbo 30.5</div>
+<div class="line">11. Go For Broke 30.5</div>
+<div class="line">13. Coog Crew 29.75</div>
+<div class="line">13. cutie pie 29.75</div>
+<div class="line">13. Jake and the Neverland Pirates 29.75</div>
+<div class="line">16. 4 Rackets 29.25</div>
+<div class="line">16. Godiva Nine! 29.25</div>
+<div class="line">16. Pooh Bear 29.25</div>
+<div class="line">16. Putin's Dog 29.25</div>
+<div class="line">16. Yoda 29.25</div>
+<div class="line">21. I lost the password to my first bracket 29.0</div>
+<div class="line">21. MidWestWheat 29.0</div>
+<div class="line">21. War Eagle 29.0</div>
+<div class="line">24. <strong>Bumblerooski 28.75</strong></div>
+<div class="line">24. <strong>Eclipse 28.75</strong></div>
+<div class="line">26. Bay City Rollers 28.5</div>
+<div class="line">26. Juul 28.5</div>
+<div class="line">26. Rapacke's Bracket 28.5</div>
+<div class="line">26. Superman 28.5</div>
+<div class="line">30. Make Bowl Season Great Again 28.25</div>
+<div class="line">31. Luck be a lady 27.5</div>
+<div class="line">32. Sorbet 27.0</div>
+<div class="line">32. <strong>Static 27.0</strong></div>
+<div class="line">32. Still a Beaver Believer 27.0</div>
+<div class="line">32. <strong>Thunder 27.0</strong></div>
+<div class="line">36. Santa Cruz Bill 26.75</div>
+<div class="line">37. <strong>#MamaBear 26.5</strong></div>
+<div class="line">37. Kevin's bracket 26.5</div>
+<div class="line">39. Katyusha 26.25</div>
+<div class="line">39. <strong>Nerf Herder 26.25</strong></div>
+<div class="line">39. Texas Big Red 26.25</div>
+<div class="line">39. Victorious Secret 26.25</div>
+<div class="line">43. Pepper Bear 26.0</div>
+<div class="line">44. Batman 25.75</div>
+<div class="line">44. Lucky in 2018 25.75</div>
+<div class="line">46. <strong>GlamKam 25.5</strong></div>
+<div class="line">47. Assistant Coach Riley? 25.25</div>
+<div class="line">48. Blindhog2017 25.0</div>
+<div class="line">49. Blind Dog's Bluff 24.75</div>
+<div class="line">49. Escalante 24.75</div>
+<div class="line">49. Go For Bones 24.75</div>
+<div class="line">49. Josh's Bracket 24.75</div>
+<div class="line">53. Brothers before others 24.25</div>
+<div class="line">54. Adrian A 24.0</div>
+<div class="line">54. OSUX3 24.0</div>
+<div class="line">56. Julez 23.75</div>
+<div class="line">56. Santa's Helper 23.75</div>
+<div class="line">56. Sgt. Pepper 23.75</div>
+<div class="line">59. The Striker 23.5</div>
+<div class="line">60. <strong>D-Bo 23.25</strong></div>
+<div class="line">61. YOLO Pups 23.0</div>
+<div class="line">62. War Beaver 22.75</div>
+<div class="line">63. hapagirl 22.25</div>
+<div class="line">63. Nurse Ratched 22.25</div>
+<div class="line">65. Maui Girl 21.75</div>
+<div class="line">66. <strong>Lightning 21.5</strong></div>
+<div class="line">67. Duke Rules 21.25</div>
+<div class="line">68. Warren Mooned Me 21.0</div>
+<div class="line">69. <strong>Em214 20.5</strong></div>
+<div class="line">70. Swampdonkey 20.25</div>
+<div class="line">71. West Coast Bias 16.25</div>
 </div>
 </div>
 </body>
