--- a/bowl_pool/test/2017-2018/rankings.html
+++ b/bowl_pool/test/2017-2018/rankings.html
@@ -364,81 +364,81 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2017-12-30 23:00:17</em></div>
-<div class="line"><em>Last bowl scored:  Outback Bowl (Michigan vs. South Carolina)</em></div>
+<div class="line"><em>Last updated:  2018-01-01 18:08:43</em></div>
+<div class="line"><em>Last bowl scored:  Citrus Bowl (Lousiana State (LSU) vs. Notre Dame)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. The Water and The Well 31.25</div>
-<div class="line">2. <strong>Bumblerooski 30.25</strong></div>
-<div class="line">3. Clutch City 29.0</div>
-<div class="line">4. Cowboy 28.75</div>
-<div class="line">4. The Pick Doctor 28.75</div>
-<div class="line">6. Bobbo 28.5</div>
-<div class="line">6. UrbranLegend 28.5</div>
-<div class="line">8. Bevo's Best 28.25</div>
-<div class="line">9. cutie pie 27.75</div>
-<div class="line">9. Jake and the Neverland Pirates 27.75</div>
-<div class="line">11. Juul 27.5</div>
-<div class="line">11. Trojans 27.5</div>
-<div class="line">13. Godiva Nine! 26.25</div>
-<div class="line">13. Superman 26.25</div>
-<div class="line">15. 4 Rackets 26.0</div>
-<div class="line">15. Make Bowl Season Great Again 26.0</div>
-<div class="line">15. War Eagle 26.0</div>
-<div class="line">18. <strong>Eclipse 25.75</strong></div>
-<div class="line">18. I lost the password to my first bracket 25.75</div>
-<div class="line">20. beach lady 25.5</div>
-<div class="line">21. Putin's Dog 25.0</div>
-<div class="line">21. <strong>Thunder 25.0</strong></div>
-<div class="line">21. Tucker 25.0</div>
-<div class="line">24. Santa Cruz Bill 24.5</div>
-<div class="line">25. <strong>#MamaBear 24.25</strong></div>
-<div class="line">25. Rapacke's Bracket 24.25</div>
-<div class="line">25. Texas Big Red 24.25</div>
-<div class="line">25. Victorious Secret 24.25</div>
-<div class="line">29. MidWestWheat 24.0</div>
-<div class="line">29. Pepper Bear 24.0</div>
-<div class="line">29. Sorbet 24.0</div>
-<div class="line">29. Yoda 24.0</div>
-<div class="line">33. <strong>Static 23.75</strong></div>
-<div class="line">33. Still a Beaver Believer 23.75</div>
-<div class="line">35. Katyusha 23.25</div>
-<div class="line">35. Kevin's bracket 23.25</div>
-<div class="line">35. Luck be a lady 23.25</div>
-<div class="line">35. <strong>Nerf Herder 23.25</strong></div>
-<div class="line">39. Assistant Coach Riley? 23.0</div>
-<div class="line">39. OSUX3 23.0</div>
-<div class="line">41. Winning Jeff 22.75</div>
-<div class="line">42. Bay City Rollers 22.5</div>
-<div class="line">42. Go For Broke 22.5</div>
-<div class="line">42. Josh's Bracket 22.5</div>
-<div class="line">42. Lucky in 2018 22.5</div>
-<div class="line">46. <strong>GlamKam 22.25</strong></div>
-<div class="line">47. Adrian A 22.0</div>
-<div class="line">47. Brothers before others 22.0</div>
-<div class="line">49. Coog Crew 21.75</div>
-<div class="line">49. Go For Bones 21.75</div>
-<div class="line">49. Maui Girl 21.75</div>
-<div class="line">49. Santa's Helper 21.75</div>
-<div class="line">53. Batman 21.5</div>
-<div class="line">53. Blind Dog's Bluff 21.5</div>
-<div class="line">53. Escalante 21.5</div>
-<div class="line">56. The Striker 21.25</div>
-<div class="line">57. Pooh Bear 21.0</div>
-<div class="line">58. Blindhog2017 20.75</div>
-<div class="line">58. War Beaver 20.75</div>
-<div class="line">60. Swampdonkey 20.25</div>
-<div class="line">61. YOLO Pups 20.0</div>
-<div class="line">62. Sgt. Pepper 19.75</div>
-<div class="line">63. <strong>Lightning 19.5</strong></div>
-<div class="line">64. Duke Rules 19.0</div>
-<div class="line">64. Nurse Ratched 19.0</div>
-<div class="line">66. Julez 18.75</div>
-<div class="line">67. <strong>D-Bo 18.25</strong></div>
-<div class="line">68. hapagirl 18.0</div>
-<div class="line">69. <strong>Em214 17.5</strong></div>
-<div class="line">70. Warren Mooned Me 16.75</div>
-<div class="line">71. West Coast Bias 15.25</div>
+<div class="line">1. Tucker 34.75</div>
+<div class="line">2. Clutch City 33.5</div>
+<div class="line">3. Coog Crew 33.0</div>
+<div class="line">4. Victorious Secret 32.75</div>
+<div class="line">5. UrbranLegend 32.25</div>
+<div class="line">6. Nurse Ratched 32.0</div>
+<div class="line">6. The Striker 32.0</div>
+<div class="line">6. Yoda 32.0</div>
+<div class="line">9. Bevo's Best 31.75</div>
+<div class="line">10. <strong>Thunder 31.25</strong></div>
+<div class="line">11. cutie pie 31.0</div>
+<div class="line">12. beach lady 30.5</div>
+<div class="line">12. Brothers before others 30.5</div>
+<div class="line">12. Godiva Nine! 30.5</div>
+<div class="line">12. Katyusha 30.5</div>
+<div class="line">16. Putin's Dog 30.25</div>
+<div class="line">17. Jake and the Neverland Pirates 30.0</div>
+<div class="line">18. <strong>D-Bo 29.75</strong></div>
+<div class="line">19. <strong>Nerf Herder 29.5</strong></div>
+<div class="line">20. hapagirl 29.25</div>
+<div class="line">21. <strong>Em214 28.75</strong></div>
+<div class="line">21. Josh's Bracket 28.75</div>
+<div class="line">23. Batman 28.25</div>
+<div class="line">23. YOLO Pups 28.25</div>
+<div class="line">25. Superman 28.0</div>
+<div class="line">25. Trojans 28.0</div>
+<div class="line">25. Warren Mooned Me 28.0</div>
+<div class="line">28. Cowboy 27.75</div>
+<div class="line">28. Santa's Helper 27.75</div>
+<div class="line">30. Adrian A 27.25</div>
+<div class="line">30. Blind Dog's Bluff 27.25</div>
+<div class="line">30. Rapacke's Bracket 27.25</div>
+<div class="line">33. Still a Beaver Believer 27.0</div>
+<div class="line">34. 4 Rackets 26.5</div>
+<div class="line">34. Go For Bones 26.5</div>
+<div class="line">34. <strong>Lightning 26.5</strong></div>
+<div class="line">34. Swampdonkey 26.5</div>
+<div class="line">38. Maui Girl 26.25</div>
+<div class="line">38. The Pick Doctor 26.25</div>
+<div class="line">38. War Beaver 26.25</div>
+<div class="line">41. Pooh Bear 26.0</div>
+<div class="line">41. <strong>Static 26.0</strong></div>
+<div class="line">43. Blindhog2017 25.75</div>
+<div class="line">43. Go For Broke 25.75</div>
+<div class="line">45. Lucky in 2018 25.5</div>
+<div class="line">46. Assistant Coach Riley? 25.0</div>
+<div class="line">47. <strong>GlamKam 24.75</strong></div>
+<div class="line">47. Juul 24.75</div>
+<div class="line">47. Make Bowl Season Great Again 24.75</div>
+<div class="line">50. The Water and The Well 24.5</div>
+<div class="line">51. Kevin's bracket 24.25</div>
+<div class="line">51. Santa Cruz Bill 24.25</div>
+<div class="line">53. Pepper Bear 24.0</div>
+<div class="line">54. Bay City Rollers 23.75</div>
+<div class="line">54. Julez 23.75</div>
+<div class="line">54. Sgt. Pepper 23.75</div>
+<div class="line">54. Sorbet 23.75</div>
+<div class="line">54. War Eagle 23.75</div>
+<div class="line">59. <strong>Bumblerooski 23.25</strong></div>
+<div class="line">59. Duke Rules 23.25</div>
+<div class="line">59. I lost the password to my first bracket 23.25</div>
+<div class="line">62. Bobbo 23.0</div>
+<div class="line">63. MidWestWheat 22.75</div>
+<div class="line">64. <strong>Eclipse 22.25</strong></div>
+<div class="line">65. Texas Big Red 21.25</div>
+<div class="line">66. Luck be a lady 20.5</div>
+<div class="line">67. Escalante 19.5</div>
+<div class="line">68. OSUX3 19.25</div>
+<div class="line">69. West Coast Bias 19.0</div>
+<div class="line">70. Winning Jeff 18.25</div>
+<div class="line">71. <strong>#MamaBear -32.25</strong></div>
 </div>
 </div>
 </body>
